<resources>

    <string name="app_name">SGFmobileApp</string>
    <string name="hello_world">Welcome SGFMobile</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">SGF</string>
    <string name="help">Help</string>
    <string name="date">Date</string>
    <string name="account">Account</string>
    <string name="movement_type">Movement Type</string>
    <string name="movementType">Movement Type</string>
    <string name="category">Category</string>
    <string name="sub_category">Sub-Category</string>
    <string name="amount">Amount</string>
    <string name="save_btn">Save Movement</string>
    <string name="list">List</string>
    <string name="title_activity_list_movements">SGF-Movements List</string>
    <string name="description">Description</string>
    <string name="movement_id">Movement ID</string>
    <string name="insert_movement">Insert Movement</string>
    <string name="select_account">Account</string>
    <string name="postmovements">PostMovements</string>
    <string name="sgfnewactivity">sgfnewactivity</string>
    <string name="New">New</string>
    <string name="synch">Synch</string>
    <string name="report">Report</string>
    <string name="put">Put Movements</string>

</resources>