<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >
    


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        >
            <ImageView
            android:id="@+id/imageView1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

      
        
             <Button
        android:id="@+id/imgbtn_new"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/action_new_movement_dark"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/New" />
             
                          <Button
        android:id="@+id/imgbtn_list"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/action_list_movements_dark"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/list" />

        
    
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

     
        
           <Button
        android:id="@+id/imgbtn_synch"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/action_get_movements_dark"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/synch" />
             
                          <Button
        android:id="@+id/imgbtn_report"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/action_report_dark"
        android:layout_weight="1"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/report" />
    </LinearLayout>

   

</LinearLayout>