<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Get Account Info" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Get Movements Service" />
    </LinearLayout>
 <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/totalButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Calculate Total Expense" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/helpButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/insert_movement" />
    </LinearLayout>
    

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/ListButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/list" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/PostMovements"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/postmovements" />
    </LinearLayout>
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/PutMovements"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/put" />
    </LinearLayout>

    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/NewActivity"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sgfnewactivity" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewMain"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="vazio" />
    </LinearLayout>

         <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="vazio" />
    </LinearLayout>
</LinearLayout>